@@ -1,3 +1,14 @@
+2021-05-04  Jim Mason  <jmason@ibinx.com>
+
+        [GTK] segmentation fault in WebKit::IconDatabase::loadIconForPageURL
+        https://bugs.webkit.org/show_bug.cgi?id=225279
+
+        Reviewed by Carlos Garcia Campos.
+
+        * UIProcess/API/glib/IconDatabase.cpp:
+        (WebKit::IconDatabase::loadIconForPageURL):
+        (WebKit::IconDatabase::setIconForPageURL):
+
 2021-05-04  Youenn Fablet  <youenn@apple.com>
 
         Use OptionSet for MediaProducer::MediaStateFlags
